--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo_papa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+    font-family: 'Anton';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 100px;
+    line-height: 151px;
+    color: #000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.the {
+    margin-right: 10px;
+    width: 90px;
+    height: 80px;
+    font-family: 'Anton';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    color: #fff;
+    background:#000;
+    text-transform: uppercase;
+    transform: rotate(-90deg);
+}
+/* links */
+
+header {
+    border-bottom: 2px solid #000;
+    width: 1400px;
+    margin: 30px auto 37px;
 }
 
-.App-link {
-  color: #61dafb;
+.links{
+    display: flex;
+    justify-content: space-between;
+    width: 735px;
+    margin: 30px auto;
+    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 27px;
+    color: #000000;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.link:hover {
+    padding-bottom: 4px;
+    margin-bottom: -6px;
+    border-bottom: 2px solid #000;
 }
